# px4-preflight-runner

./: .yamllint.yaml  README.md
.github/workflows/: release.yml  self-test.yml
actions/parse-spec/: action.yml
actions/publish-replay/: action.yml
actions/run-case/: action.yml
docker/: Dockerfile
scripts/: build_hawkeye_wasm.sh  compute_cache_keys.py  compute_ros_deps_key.py  generate_ros_repos.py  hawkeye_smoke_test.sh  inject_autoload.py  parse_spec.py  render_px4_config.py  resolve_px4_msgs_ref.py  run_case.sh  run_px4_build.sh  run_ros_unit.sh  run_sim.sh
templates/: replay_index.html
testdata/: bad_airframe_ref.yaml
testdata/minimal_pkg/.preflight/: spec.yaml
testdata/minimal_pkg/src/minimal_demo/: CMakeLists.txt  package.xml
testdata/minimal_pkg/src/minimal_demo/launch/: sim.launch.py
testdata/minimal_pkg/src/minimal_demo/scripts/: status_listener.py
testdata/minimal_pkg/src/minimal_demo/test/: test_dummy.py
tests/: test_parse_spec.py
